--- a/latex_tables/detailed_ideal_f1_table.tex
+++ b/latex_tables/detailed_ideal_f1_table.tex
@@ -108,6 +108,7 @@ gpt-4o & 10 & 0.8355 & 0.7195 & 0.7732 \\
 gpt-4o & 20 & 0.8257 & 0.7171 & 0.7676 \\
 gpt-4o & 50 & 0.8228 & 0.7919 & 0.8071 \\
 gpt-4o & 100 & 0.8187 & 0.8069 & 0.8128 \\
+gpt-4o-baseline & 10 & 0.3491 & 0.6099 & 0.4440 \\
 gpt-4o-mini & 10 & 0.8037 & 0.9247 & 0.8599 \\
 gpt-4o-mini & 20 & 0.7964 & 0.9307 & 0.8583 \\
 gpt-4o-mini & 50 & 0.7883 & 0.9335 & 0.8548 \\
