--- a/latex_tables/llm_summary_f1_scores.tex
+++ b/latex_tables/llm_summary_f1_scores.tex
@@ -41,6 +41,7 @@ llama-3.2-1B-instruct-grpo-001 & 0.7462 & 0.7496 \\
 DeepSeek-R1-Distill-Qwen-7B & 0.6474 & 0.6790 \\
 llama-3.2-1B-instruct-grpo-004-step-0050 & 0.6624 & 0.6789 \\
 DeepSeek-R1-Distill-Qwen-1.5B & 0.3632 & 0.5117 \\
+gpt-4o-baseline & 0.4269 & 0.4269 \\
 Llama-3.2-1B-Instruct & 0.0233 & 0.0491 \\
 \bottomrule
 \end{tabular}
