--- a/latex_tables/detailed_f1_table.tex
+++ b/latex_tables/detailed_f1_table.tex
@@ -108,6 +108,7 @@ gpt-4o & 10 & 0.8167 & 0.7195 & 0.7651 \\
 gpt-4o & 20 & 0.8071 & 0.7171 & 0.7595 \\
 gpt-4o & 50 & 0.8059 & 0.7919 & 0.7988 \\
 gpt-4o & 100 & 0.8069 & 0.8069 & 0.8069 \\
+gpt-4o-baseline & 10 & 0.3284 & 0.6099 & 0.4269 \\
 gpt-4o-mini & 10 & 0.7694 & 0.9247 & 0.8399 \\
 gpt-4o-mini & 20 & 0.7667 & 0.9307 & 0.8408 \\
 gpt-4o-mini & 50 & 0.7630 & 0.9335 & 0.8397 \\
