--- a/latex_tables/llm_summary_ideal_f1_scores.tex
+++ b/latex_tables/llm_summary_ideal_f1_scores.tex
@@ -41,6 +41,7 @@ Llama-3.2-3B-Instruct & 0.7341 & 0.7771 \\
 llama-3.2-1B-instruct-grpo-004-step-0050 & 0.6878 & 0.7014 \\
 DeepSeek-R1-Distill-Qwen-7B & 0.6687 & 0.6972 \\
 DeepSeek-R1-Distill-Qwen-1.5B & 0.3710 & 0.5259 \\
+gpt-4o-baseline & 0.4440 & 0.4440 \\
 Llama-3.2-1B-Instruct & 0.0234 & 0.0494 \\
 \bottomrule
 \end{tabular}
